--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 30px;
+}
+
 .cards {
   display: flex;
   flex-direction: column;
   border-radius: 5px;
   overflow: hidden;
+  max-width: 800px;
 }
 @media screen and (min-width: 600px) {
   .cards {
